<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.first.dumka.room_book_app.std_room.Std_Room.Fragment.HomeFragment"
        android:label="@string/Std_Room"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_login_page"
        android:name="com.first.dumka.room_book_app.std_room.Std_Room.Fragment.LoginFragment"
        android:label="@string/Login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_contact_us_page"
        android:name="com.first.dumka.room_book_app.std_room.Std_Room.Fragment.ContactusFragment"
        android:label="@string/ContactUs"
        tools:layout="@layout/fragment_contactus" />

    <fragment
        android:id="@+id/nav_about_us_page"
        android:name="com.first.dumka.room_book_app.std_room.Std_Room.Fragment.AboutUsFragment"
        android:label="@string/AboutUs"
        tools:layout="@layout/fragment_about_us" />


</navigation>